# it2ui

./: LICENSE  README.md  pyproject.toml  renovate.json5
.github/workflows/: ci.yml
src/it2ui/: cli.py
src/it2ui/backend/: iterm2_backend.py  protocol.py
src/it2ui/domain/: controller.py  models.py  search.py
src/it2ui/tui/: __init__.py  app.py
src/itwm/: cli.py
src/itwm/backend/: iterm2_backend.py  protocol.py
src/itwm/domain/: controller.py  models.py  search.py
src/itwm/tui/: __init__.py  app.py
tests/: test_controller.py  test_iterm2_backend_subscribe.py  test_models.py  test_search.py  test_tui.py
